@@ -63,12 +63,12 @@ install()  {
   if [ -e META.xenctrl.in ]; then
     sed -e "s/@VERSION@/${VERSION}/g" < META.xenctrl.in > _config/META.xenctrl
   fi
-  ${OCAMLFIND} remove ${NAME} || true
+  ${OCAMLFIND} remove ${NAME}-${MIRAGE_OS} || true
   t=`sed -e 's,^,_build/,g' < _build/${NAME}.all`
   if [ ! -z "${DESTDIR}" ]; then
     OCAMLFIND_FLAGS="${OCAMLFIND_FLAGS} -destdir ${DESTDIR}"
   fi
-  ${OCAMLFIND} install ${OCAMLFIND_FLAGS} ${NAME} _config/META ${t}
+  ${OCAMLFIND} install ${OCAMLFIND_FLAGS} ${NAME}-${MIRAGE_OS} _config/META ${t}
   if [ -e _config/META.xenctrl ]; then
     ${OCAMLFIND} remove xenctrl || true
     ${OCAMLFIND} install ${OCAMLFIND_FLAGS} xenctrl _config/META.xenctrl
@@ -80,7 +80,7 @@ uninstall() {
     ${OCAMLFIND} remove xenctrl
   fi
   if [ -e META.in ]; then
-    ${OCAMLFIND} remove mirage
+    ${OCAMLFIND} remove mirage-${MIRAGE_OS}
   fi
 }
 
